--- a/aboutus.html
+++ b/aboutus.html
@@ -6,16 +6,16 @@
     <title>Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="aboutus">
         <h1>032C</h1>
         <nav class="navbar">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us </a></li>
-                <li><a href="store.html">Store</a></li>
+                
         </nav>
-    <img src="img/032.about.jpg"> 
+    <img id="img-ab" src="img/032.about.jpg"> 
     <section id="aboutus">
             <h1>About Us</h1>
             <h3>032c is a media and fashion company for the 21st century. Founded by Joerg Koch in 2000, 032c began as a magazine in Berlin. Now the brand also creates ready-to-wear collections and community-catalysing experiences on a global scale. The mission of every 032c production is to inform, provoke, and activate the imagination. The 032c universe is a place for freedom, research, and creativity, where fantasy is reality, aspiration is attainment, and everything is culture in the making. And, like any universe, 032c is expanding.
