--- a/home.html
+++ b/home.html
@@ -6,23 +6,23 @@
     <title>Menu</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
-<body>
+<body id="home">
         <h1>032C</h1>
         <nav class="navbar">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us </a></li>
-                <li><a href="store.html">Store</a></li>
+                
         </nav>
-    <img src="img/032c_proj.jpg"> 
+    <img id="img-home-top" src="img/032c_proj.jpg"> 
     <section id="home">
             <h2>Home</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nulla expedita porro repellat quis, quisquam blanditiis eaque dolor repellendus. Deleniti, corrupti fuga! Cumque quam deserunt fugit itaque repudiandae possimus provident.</p>
             <br>
             <h3>032c Runway Show During Paris Fashion Week</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi architecto, aut ea obcaecati, molestiae itaque praesentium repellat dolorem totam inventore sapiente minus tempora saepe, sed veniam cupiditate perferendis cum eos.</p>
-            <img src="img/032c.webp" alt="Imagem" style="border-radius: 50%;">
+            <img id="img-home" src="img/032c.webp" alt="Imagem" style="border-radius: 50%;">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, vel odit? Ex, aliquid illo natus repudiandae temporibus labore beatae maiores commodi? Quaerat aperiam, facere nesciunt reiciendis ducimus veritatis ab laboriosam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem enim ad repellendus reiciendis exercitationem amet modi facere esse doloremque veniam accusantium, facilis corporis similique explicabo blanditiis nobis. Commodi, sit vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, a nam! Sunt omnis minima impedit error quidem laborum laboriosam quasi minus magni architecto rem excepturi similique molestias, sint quibusdam dolorem!</p>
             <br>
             <p>Read <a href="https://032c.com/magazine/032c-runway-show-during-paris-fashion-week">more</a></p>
