--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,17 @@
     <title>Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="contact">
         <h1>032C</h1>
         <nav class="navbar">
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us </a></li>
-                <li><a href="store.html">Store</a></li>
+                
         </nav>
-    <img src="img/032c.contact_.jpg"> 
-    <section id="contact">
+    <img id="img-cont" src="img/032c.contact_.jpg"> 
+    <section>
             <h1>Contact & Legal</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate nulla expedita porro repellat quis, quisquam blanditiis eaque dolor repellendus. Deleniti, corrupti fuga! Cumque quam deserunt fugit itaque repudiandae possimus provident.</p>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa similique harum numquam rerum consectetur ab incidunt qui? Non totam debitis nihil, fugit sed ipsum quis nemo vitae, expedita, quasi mollitia?</p>
